get_filename_component(tarName ${CMAKE_CURRENT_SOURCE_DIR} NAME)
STRING(SUBSTRING ${tarName} 0 4 PRONAME)
project("cpp_${PRONAME}")
file(GLOB_RECURSE CURRENT_HEADERS *.h *.hpp)
aux_source_directory(. SRC)
add_executable(${PROJECT_NAME} ${SRC} ${CURRENT_HEADERS})
target_link_libraries(${PROJECT_NAME} PRIVATE catch)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
include(CTest)
include(Catch)
catch_discover_tests(${PROJECT_NAME})